--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>core</module>
+        <module>maven-plugin</module>
+        <module>examples</module>
     </modules>
 
 </project>
